# hum

./: .gitignore  CLAUDE.md  README.md  advanced_vocal_to_humming.py  balanced_sleep_humming.py  main.py  pyproject.toml  ultra_vocal_to_humming.py  vocal_to_humming.py
