[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.21.0",
    "librosa>=0.9.0",
    "soundfile>=0.11.0",
    "scipy>=1.7.0",
]

[tool.setuptools]
py-modules = ["vocal_to_humming", "advanced_vocal_to_humming", "main"]
